# rust-api-fxs

./: .editorconfig  .gitignore  Cargo.toml  README.md  Rocket.toml  justfile  notes.md  requests-hero-manager.http  requests.http  spin.toml
hero-manager-axum/: .env  Cargo.toml  justfile  readme.md  requests.http
hero-manager-axum/migrations/: 20221108190627_create_heroes_table.down.sql  20221108190627_create_heroes_table.up.sql  20221108190628_add_heroes_check_constraints.down.sql  20221108190628_add_heroes_check_constraints.up.sql  20221109142615_add_unique_name.down.sql  20221109142615_add_unique_name.up.sql
hero-manager-axum/src/: axum_helpers.rs  data.rs  error.rs  healthcheck.rs  heroes.rs  main.rs  model.rs  problem_details.rs  routes.rs
todo-actix-web/: Cargo.toml
todo-actix-web/src/: main.rs
todo-axum/: Cargo.toml
todo-axum/src/: main.rs
todo-logic/: Cargo.toml
todo-logic/src/: lib.rs
todo-rocket/: Cargo.toml
todo-rocket/src/: main.rs
todo-spin/: Cargo.toml
todo-spin/src/: extractors.rs  lib.rs  responders.rs
todo-warp/: Cargo.toml
todo-warp/src/: main.rs
