[package]
name = "todo-spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" }
# General-purpose crate with common HTTP types.
http = "0.2"
# Crate to simplify working with bytes.
bytes = "1"
serde = "1"
serde_json = "1"
base64 = "0.21"
regex = "1"
todo-logic ={ path = "../todo-logic", default-features = false }
